tests/ui/resolve/suggestions/suggest-vec-not-slice.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/suggest-vec-not-slice.rs:2:16
   |
LL | fn values() -> &[i32] {
   |                ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime, but this is uncommon unless you're returning a borrowed value from a `const` or a `static`
   |
LL | fn values() -> &'static [i32] {
   |                 +++++++
help: instead, you are more likely to want to return an owned value
   |
LL - fn values() -> &[i32] {
LL + fn values() -> Vec<i32> {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
